--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -2009,6 +2009,9 @@ img.float-right {
 	height: 78px;
 	vertical-align: middle;
 }
+.cart table tbody tr {
+	transition: transform 0.4s ease-in-out;
+}
 .cart table td {
 	padding: 20px 0;
 	vertical-align: top;
@@ -2045,16 +2048,20 @@ img.float-right {
 	color: #CB1F26;
 }
 .cart table .old-price {
-	font-size: 10px;
+	font-size: 14px;
 	color: #000000;
 	text-decoration: line-through;
 }
-.cart table .special-price span,
+.cart table td:nth-child(7) span:after {
+	content: ' руб.';
+	font-size: 10px;
+}
+/*.cart table .special-price span,
 .cart table .old-price span, 
 .cart table td:nth-child(6) span,
 .cart table td:nth-child(7) span {
 	font-size: 14px;
-}
+}*/
 .cart table ul li:before {
 	content: '- ';
 }
